testdata/baselines/reference/submodule/compiler/destructuringInVariableDeclarations8.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
destructuringInVariableDeclarations8.ts(1,7): error TS2339: Property 'toString' does not exist on type '{}'.
destructuringInVariableDeclarations8.ts(3,11): error TS2339: Property 'toFixed' does not exist on type '{}'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== destructuringInVariableDeclarations8.ts (2 errors) ====
    let { toString } = 1;
          ~~~~~~~~
!!! error TS2339: Property 'toString' does not exist on type '{}'.
    {
        let { toFixed } = 1;
              ~~~~~~~
!!! error TS2339: Property 'toFixed' does not exist on type '{}'.
    }
    export {};
    